# on-the-fly-transcoding

./: .gitignore  CMakeLists.txt  README.md  run.sh  samples.txt  segment.ts  setup.sh
demo/: app.html
otft/: common.go  go.mod  lru_cache.go  main.go  profiles.go  route.go  transcode.go
research/: CMakeLists.txt  main.cpp  run.sh
src/: main.cpp  predefined.h
src/common/: Format.h  Job.cpp  Job.h  Media.h
src/controller/: TranscodeController.cpp  TranscodeController.h
src/net/: http.h
src/processor/: Transcoder.cpp  Transcoder.h
src/utils/: base64url.h
